## Makefile.am -- Makefile for WHIZARD data files
##
## Process this file with automake to produce Makefile.in

## (Almost) empty dummy Makefile.am, because it is needed by make dist

# Used by a unit test, so distribute
EXTRA_DIST = \
  index.ejs \
  header.ejs \
  footer.ejs \
  navbar.ejs \
  about.ejs \
  content.ejs \
  README.md \
  app.js \
  configure.sh \
  routes/about.js \
  routes/index.js \
  routes/user.js \
  public/images \
  public/images/Whizard-Logo.jpg \
  public/stylesheets \
  public/stylesheets/bootstrap.css \
  public/stylesheets/style.css \
  public/stylesheets/bootstrap-theme.css \
  public/docs/GUI_Walkthrough.pdf \
  public/fonts/glyphicons-halflings-regular.woff \
  public/fonts/glyphicons-halflings-regular.eot \
  public/fonts/glyphicons-halflings-regular.svg \
  public/fonts/glyphicons-halflings-regular.ttf \
  public/fonts/glyphicons-halflings-regular.woff2 \
  public/js/generic.js \
  public/js/gui.config.js \
  public/js/examples.js \
  public/js/bootstrap.min.js \
  public/js/process.js \
  public/js/alias.js \
  public/js/constructSindarin.js \
  public/js/models.js \
  public/js/cuts.js \
  public/js/tabs.scan.js \
  public/js/tabs.integration.js \
  public/js/tabs.simulate.js



# Other beam events files should be handled by the Makefile in the
# parent directory
